--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,10 @@ sudo: false
 
 before_script:
   - sh -c "composer install --dev --no-progress"
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
 
 script:
-  - vendor/bin/phpunit --configuration phpunit.xml --coverage-text --coverage-clover clover.xml
+  - mkdir -p build/logs
+  - vendor/bin/phpunit --configuration phpunit.xml --coverage-text --coverage-clover build/logs/clover.xml
 
-after_script:
-  - ./cc-test-reporter after-build -t clover --exit-code $TRAVIS_TEST_RESULT
+after_success:
+  - travis_retry php vendor/bin/php-coveralls
