--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ php:
 sudo: false
 
 before_script:
-  - sh -c "composer install --dev --no-progress"
+  - composer install --dev --no-progress
 
 script:
   - mkdir -p build/logs
   - vendor/bin/phpunit --configuration phpunit.xml --coverage-text --coverage-clover build/logs/clover.xml
 
 after_success:
-  - travis_retry php vendor/bin/php-coveralls
+  - travis_retry php vendor/bin/php-coveralls -v
