--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,3 +1,3 @@
 service_name: travis-ci
-coverage_clover: ./coverage/clover.xml
-json_path: ./coverage/coveralls-upload.json
+coverage_clover: coverage/clover.xml
+json_path: coverage/coveralls-upload.json
