--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_script:
   - composer install --no-progress
 
 script:
-  - mkdir -p build/logs
+  - mkdir -p coverage
   - vendor/bin/phpunit --configuration phpunit.xml --coverage-text --coverage-clover build/logs/clover.xml
   - php vendor/bin/php-coveralls -v -n
