--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_script:
   - composer install --no-progress
 
 script:
-  - mkdir -p coverage
+  - mkdir -p build/logs
   - vendor/bin/phpunit --configuration phpunit.xml
   - php vendor/bin/php-coveralls -v -n
+
+after_success:
+  - vendor/bin/php-coveralls -v --exclude-no-stmt
