--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ script:
   - vendor/bin/phpunit --configuration phpunit.xml --coverage-text
 
 after_success:
+  - bash <(curl -s https://codecov.io/bash)
   - vendor/bin/php-coveralls -v --exclude-no-stmt
