--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
         "ext-mbstring": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.8.28 <5",
-        "php-coveralls/php-coveralls": "^2.1"
+        "phpunit/phpunit": ">=4.8.28 <5"
     },
     "autoload": {
         "psr-4": {
