--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,13 @@ sudo: false
 
 before_script:
   - composer install --no-progress
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 script:
   - mkdir -p build/logs
   - vendor/bin/phpunit --configuration phpunit.xml --coverage-text
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
