--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ php:
 
 sudo: false
 
+code_climate: true
+
 before_script:
   - composer install --no-progress
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
